testsuite/vhdl/syntax/test_data/label_missmatch/000_architecture.expected
in file label_missmatch/000_architecture, line 7:
syntax error: Label mismatch in Architecture Body
architecture BENCH of testbench is
             ~~~~~ <<-- here
...
end architecture TEST_BENCH; -- BENCH vs. TEST_BENCH
                 ~~~~~~~~~~ <<-- and here
